--- a/portal2/src/main/webapp/themes/default/css/fulldoc.css
+++ b/portal2/src/main/webapp/themes/default/css/fulldoc.css
@@ -477,6 +477,8 @@ h1 {
 .rights-badge span.rights-text{
 	font-size:	0.75em;
 	color:		#888;
+	position:   relative;
+	top:        -0.27em;
 }
 
 /* additional-actions */
